# Prova

./: setup.cfg
django-tutorial-env/example_package_Alessandro.egg-info/: PKG-INFO  SOURCES.txt
django-tutorial-env/prova.egg-info/: PKG-INFO  SOURCES.txt
