[metadata]
name = prova
version = 0.0.2
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/AlleArto/Prova
project_urls =
    Bug Tracker = https://github.com/AlleArto/Prova/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = django-tutorial-env
packages = find:
python_requires = >=3.6

[options.packages.find]
where = django-tutorial-env